src/syntax/parse/snapshots/dilaria__syntax__parse__test__r#while__empty.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
While(
    WhileStmt {
        span: Span(
            0..0,
        ),
        cond: Literal(
            Boolean(
                true,
                Span(
                    0..0,
                ),
            ),
        ),
        body: Block {
            stmts: [],
            span: Span(
                0..0,
            ),
        },
    },
)
