src/syntax/parse/snapshots/dilaria__syntax__parse__test__r#while__or_condition_break.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
While(
    WhileStmt {
        span: Span(
            0..0,
        ),
        cond: BinaryOp(
            BinaryOp {
                span: Span(
                    0..0,
                ),
                lhs: Literal(
                    Boolean(
                        false,
                        Span(
                            0..0,
                        ),
                    ),
                ),
                rhs: Literal(
                    Boolean(
                        true,
                        Span(
                            0..0,
                        ),
                    ),
                ),
                kind: Or,
            },
        ),
        body: Block {
            stmts: [
                Break(
                    Span(
                        0..0,
                    ),
                ),
            ],
            span: Span(
                0..0,
            ),
        },
    },
)
